# scout

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scout.yml
config/: keywords.yaml  naics_psc.yaml  portfolio.yaml
data/: scout.db
docs/: digest_2026-04-17.md  digest_2026-04-18.md  digest_2026-04-19.md  digest_2026-04-20.md  digest_2026-04-21.md  digest_2026-04-22.md  digest_2026-04-23.md  digest_2026-04-24.md  digest_2026-04-25.md  digest_2026-04-26.md  digest_2026-04-27.md  digest_2026-04-28.md  digest_2026-04-29.md  digest_2026-04-30.md  digest_2026-05-01.md  digest_2026-05-02.md  digest_2026-05-03.md  digest_2026-05-04.md  digest_2026-05-05.md  digest_2026-05-06.md  digest_2026-05-07.md  digest_2026-05-08.md  digest_2026-05-09.md  digest_2026-05-10.md  digest_2026-05-11.md  digest_2026-05-12.md  digest_2026-05-13.md  digest_2026-05-14.md  digest_2026-05-15.md  digest_2026-05-16.md  digest_2026-05-17.md  digest_2026-05-18.md  digest_2026-05-19.md  digest_2026-05-20.md  digest_2026-05-21.md  digest_2026-05-22.md  digest_2026-05-23.md  digest_2026-05-24.md  digest_2026-05-25.md  digest_2026-05-26.md  (+36 more)
src/scout/: cli.py  config.py
src/scout/adapters/: base.py  doe_sc.py  grants_gov.py  sam_gov.py
src/scout/alerting/: digest.py  email.py
src/scout/pipeline/: __init__.py  eligibility.py  lane.py  lexical_gate.py  llm_classify.py
src/scout/storage/: db.py  schema.sql
src/scout/web/: generate.py
tests/: test_lane.py  test_lexical_gate.py  test_sam_gov_adapter.py
