[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout"
version = "0.1.0"
description = "Early-warning system for power and energy funding opportunities"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
scout = "scout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
